<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Calculadora" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Digite o 1º Numero" />

    <EditText
        android:id="@string/numero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Digite o 2º Numero" />

    <EditText
        android:id="@string/numero2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Resultado" />

    <EditText
        android:id="@string/resultado"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.23"
        android:orientation="horizontal" >

        <Button
            android:id="@string/btnSomar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />

        <Button
            android:id="@string/btnSubtrair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />

        <Button
            android:id="@string/btnMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x" />

        <Button
            android:id="@string/btnDividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/" />
    </LinearLayout>

    <Button
        android:id="@string/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="L" />

</LinearLayout>